--- a/elab4-backend/.settings/org.eclipse.wst.common.component
+++ b/elab4-backend/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/assert/java"/>
         <dependent-module archiveName="elab4-common-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/elab4-common/elab4-common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
