--- a/elab4-backend/.settings/org.eclipse.wst.common.component
+++ b/elab4-backend/.settings/org.eclipse.wst.common.component
@@ -12,7 +12,7 @@
         <dependent-module archiveName="jax-rs-tools-0.0.6.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jax-rs-tools/jax-rs-tools">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module deploy-path="/" handle="module:/overlay/var/M2_REPO/nl/knaw/huygens/elab4/elab4-backend-configuration-local/1.0/elab4-backend-configuration-local-1.0.war?unpackFolder=target/m2e-wtp/overlays&amp;includes=**/*.xml&amp;excludes=META-INF/MANIFEST.MF">
+        <dependent-module deploy-path="/" handle="module:/overlay/var/M2_REPO/nl/knaw/huygens/elab4/elab4-backend-configuration-example/4.0-SNAPSHOT/elab4-backend-configuration-example-4.0-SNAPSHOT.war?unpackFolder=target/m2e-wtp/overlays&amp;includes=**/*.xml&amp;excludes=META-INF/MANIFEST.MF">
             <dependency-type>consumes</dependency-type>
         </dependent-module>
         <dependent-module deploy-path="/" handle="module:/overlay/slf/?includes=**/**&amp;excludes=META-INF/MANIFEST.MF">
