--- a/elab4-backend/.settings/org.eclipse.wst.common.component
+++ b/elab4-backend/.settings/org.eclipse.wst.common.component
@@ -6,10 +6,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/assert/java"/>
-        <dependent-module archiveName="elab4-common-4.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/elab4-common/elab4-common">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="jax-rs-tools-0.0.6.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jax-rs-tools/jax-rs-tools">
+        <dependent-module archiveName="elab4-common-4.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/elab4-common/elab4-common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module deploy-path="/" handle="module:/overlay/var/M2_REPO/nl/knaw/huygens/elab4/elab4-backend-configuration-example/4.0-SNAPSHOT/elab4-backend-configuration-example-4.0-SNAPSHOT.war?unpackFolder=target/m2e-wtp/overlays&amp;includes=**/*.xml&amp;excludes=META-INF/MANIFEST.MF">
